import proguard.gradle.ProGuardTask

buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath 'com.guardsquare:proguard-gradle:7.6.0'
    }
}

plugins {
    id 'java'
    id 'idea'
    id 'org.jetbrains.kotlin.jvm' version '2.2.21'
    id 'org.jetbrains.kotlinx.kover' version '0.9.9'
    id 'org.jetbrains.kotlin.plugin.serialization' version '2.2.21'
    id 'org.openstreetmap.josm' version '0.8.2'
}

group 'org.openstreetmap.josm.plugins.dl.geaddresshelper'
version '12'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}

dependencies {
    implementation 'org.jetbrains.kotlin:kotlin-stdlib:2.2.21'
    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.11.0'
    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.8.0'

    packIntoJar 'org.jetbrains.kotlin:kotlin-stdlib:2.2.21'
    packIntoJar 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.11.0'
    packIntoJar 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.8.0'

    testImplementation 'junit:junit:4.13.1'
    testImplementation 'org.junit.vintage:junit-vintage-engine:5.8.2'
    testImplementation 'org.mockito.kotlin:mockito-kotlin:5.1.0'
    testImplementation("org.openstreetmap.josm:josm-unittest:") { changing = true }
    testImplementation 'com.github.tomakehurst:wiremock-jre8:2.32.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
    testImplementation 'org.skyscreamer:jsonassert:1.5.0'

    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
}

jar {
    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
}

test {
    useJUnitPlatform()
}

sourceSets {
    test {
        resources {
            srcDirs = ["src/test/data"]
        }
    }
}

josm {
    pluginName = "georgian-address-helper"
    debugPort = 1729
    josmCompileVersion = 18902
    manifest {
        description = "Плагин JOSM для загрузки адресов из NAPR"
        mainClass = "org.openstreetmap.josm.plugins.dl.geaddresshelper.GeAddressHelperPlugin"
        minJosmVersion = 17919
        author = "Antisida"
        canLoadAtRuntime = true
        iconPath = "images/flag_georgia.svg"
    }
}

tasks.named('runJosm') {
    jvmArgs += [
            "--add-opens=java.prefs/java.util.prefs=ALL-UNNAMED",
            "-Dfile.encoding=UTF-8"
    ]
}

//gradle clean shrinkPluginJar
tasks.register('shrinkPluginJar', ProGuardTask) {
    dependsOn tasks.named('jar')

    injars tasks.named('jar').flatMap { it.archiveFile }
    outjars layout.buildDirectory.file("dist/shrink/georgian-address-helper.jar")

    // Загрузка JMODs JDK 17
    File jmodsDir = new File(System.getProperty('java.home'), 'jmods')
    if (jmodsDir.exists()) {
        jmodsDir.listFiles().findAll { it.name.endsWith('.jmod') }.each { jmodFile ->
            libraryjars(jmodFile, filter: '!module-info.class')
        }
    } else {
        libraryjars "${System.getProperty('java.home')}/lib/modules(!module-info.class)"
    }

    libraryjars configurations.compileClasspath

    dontobfuscate() // Отключаем обфускацию
    dontoptimize()  // Отключает оптимизацию байт-кода
    dontwarn()
    dontnote()

    keepdirectories()

    keepattributes '*Annotation*,Signature,InnerClasses,EnclosingMethod,File*,RuntimeVisibleAnnotations,RuntimeVisibleParameterAnnotations'

    // Защита внутренней механики Kotlin Coroutines и лямбд
    keep 'class kotlinx.coroutines.** { *; }'
    keep 'class kotlin.jvm.functions.** { *; }'
    keep 'class kotlin.coroutines.** { *; }'

    // Главная точка входа плагина JOSM
    keep 'public class * extends org.openstreetmap.josm.plugins.Plugin { public <init>(...); }'

    // Сохранение DTO kotlinx.serialization
    keepclassmembers 'class * { @kotlinx.serialization.Serializable <fields>; }'
    keep 'class * implements kotlinx.serialization.KSerializer'
}